@@ -1,0 +1,6 @@
+
+process FAIL =
+{
+  source = FakeSource { }
+  include "FWCore/ParameterSet/test/circular.txt"
+}
